lshkit 0.2

* Added a preliminary LSH Forest implementation with an example program tools/forest-run.cpp.
* Added tools/embedder.cpp, a sample program of random histogram embedding.
* Added R-NN support to Topk.  
* Added R-NN support in tools/scan.cpp, tools/mplsh-run.cpp, tools/lsh-run.cpp, tools/sketch-run.cpp.  Set K = 0 for R-NN.

lshkit 0.1.2 - 2009-02-15

* Fixed the boost building problem.

lshkit 0.1.1 - 2009-02-14
 
* Added the required Boost source files to the package, so a standalone boost installation is not needed.
* Reduced dependency on Boost.  Now only boost_program_option needs to be linked for the tools. The main LSHKIT library only depends on Boost header files.

lshkit 0.1 - 2009-02-11

* This is the initial versioned release of LSHKIT.
* The project is migrated to sourceforge.